Fix image display on mobile devices

--- a/components/image/image.module.css
+++ b/components/image/image.module.css
@@ -6,15 +6,15 @@
 	max-width: 100%;
 	object-fit: cover;
 	height: 100%;
-	border-radius: .5rem;
-	-webkit-border-radius: .5rem;
-	-moz-border-radius: .5rem;
-	-ms-border-radius: .5rem;
-	-o-border-radius: .5rem;
+	border-radius: 0.5rem;
+	-webkit-border-radius: 0.5rem;
+	-moz-border-radius: 0.5rem;
+	-ms-border-radius: 0.5rem;
+	-o-border-radius: 0.5rem;
 }
 
-@media screen and (max-width: 500px) {
-	.container {
-		/* display: none; */
+@media screen and (max-width: 640px) {
+	.hero {
+		display: none;
 	}
 }
